added links to small sneaker images

--- a/public/views/show.ejs
+++ b/public/views/show.ejs
@@ -20,22 +20,22 @@
           </div>
           <div class = "img-select">
             <div class = "img-item">
-              <a href = "https://stockx.com/nike-dunk-high-black-varsity-maize?country=US&currencyCode=USD&size=6&g_network=g&g_productchannel=online&g_adid=244607812448&g_campaign=OD+-+Segment+-+Sneakers+-+Adult+Sizes+-+%28US%29&g_keyword=&g_adtype=pla&g_keywordid=aud-314644233035:pla-302855020304&g_acctid=709-098-4271&g_ifcreative=&gclsrc=aw.ds&g_adgroupid=50672857117&g_productid=c44c8e2c-8a09-498b-aec2-25f8a0483f02&g_merchantid=111829866&g_partition=302855020304&g_campaignid=1032998786&g_ifproduct=product&?utm_source=google&utm_medium=cpc&utm_campaign=OD-Segment-Sneakers-AdultSizes-(US)&utm_campaignid=1032998786&content=244607812448&keyword&gclid=Cj0KCQiAoY-PBhCNARIsABcz773CrjUEOemKQGmesgamjxuKEu754cPZpEaPg_Lj251yXG0uo7at8XoaAk0IEALw_wcB" data-id = "1">
+              <a href = "<%= sneaker.lnk1%>" data-id = "1">
                 <img class="show-img"src = "<%= sneaker.bottomL %>" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
-              <a href = "https://www.goat.com/sneakers/dunk-high-sp-iowa-2020-cz8149-002?utm_source=google_int&utm_medium=google_shopping_int&utm_campaign=14323870519_134709671228&utm_content=540105504230_&utm_term=194954221649&gclid=Cj0KCQiAoY-PBhCNARIsABcz772CQWB69mcf-BbPtgnWFG8dVlEn5YYbU16GTU-j8vEOU3ztnVtttP0aAsaeEALw_wcB" data-id = "2">
+              <a href = "<%= sneaker.lnk2%>" data-id = "2">
                 <img class="show-img" src = "<%= sneaker.bottomCL %>" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
-              <a href = "https://www.flightclub.com/dunk-high-sp-iowa-2020-cz8149-002?https://www.flightclub.com/nike?utm_source=google&utm_medium=google_shoppingt&utm_campaign=15025406569_135524539144&utm_content=554950509038_&utm_term=194954221663&gclid=Cj0KCQiAoY-PBhCNARIsABcz772GS83MRPOcHlowSOhTpD5jWmzDqhOMlGztbwF_l7WVQ50I2YtBgCYaAm5bEALw_wcB" data-id = "3">
+              <a href = "<%= sneaker.lnk3%>" data-id = "3">
                 <img class="show-img"src = "<%= sneaker.bottomCR %>" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
-              <a href = "https://www.stadiumgoods.com/en-us/shopping/dunk-high-sp-varsity-maize-16157988?size=36&gclid=Cj0KCQiAoY-PBhCNARIsABcz771VidarOfuq5QEpK022fnGDtHNl2K4ADJso4zGRG5JEOwAHN-XAlmUaAkm7EALw_wcB" data-id = "4">
+              <a href = "<%= sneaker.lnk4%> data-id = "4">
                 <img class="show-img" src = "<%= sneaker.bottomR %>" alt = "shoe image">
               </a>
             </div>
