--- a/public/views/edit.ejs
+++ b/public/views/edit.ejs
@@ -1,5 +1,6 @@
-<div class="background"></div>
-<div class="edit-div">
+<div class="edit-div"></div>
+<img class="background"></img>
+
   <div class="edit-card">
     <h2>Edit Sneaker</h2>
     <div class="row">
