--- a/public/views/new.ejs
+++ b/public/views/new.ejs
@@ -1,5 +1,90 @@
-<section class="new-background"></section> 
+<section class="new-background"></section>  
 <div class="new-div">
+<div class="new-card">
+<h2>create New Sneaker</h2>
+<div class="row1">
+<div class="col1">
+<div class="form-group1">
+<form action="/sneaker" method="POST">
+  <label for="brand">Brand</label>
+  <input type="text" name='brand' id='brand'class="new-input">
+</div>
+</div>
+<div class="col1">
+  <div class="form-group1">
+  <label for="name">Name</label>
+  <input type="text" name='name' id='name'class="new-input">
+  </div>
+  </div>
+  <div class="col1">
+    <div class="form-group1">
+  <label for="img">Image Link</label>
+  <input type="text" name='img' id='img'class="new-input">
+  </div>
+  </div>
+  <div class="col1">
+  <div class="form-group1">
+  <label for="imgl">ImageL</label>
+  <input type="text" name='imgl' id='imgl'class="new-input">
+  </div>
+  </div>
+  <div class="col1">
+  <div class="form-group1">
+  <label for="imgcl">ImageCL</label>
+  <input type="text" name='imgcl' id='imgcl'class="new-input">
+  </div>
+  </div>
+  <div class="col1">
+  <div class="form-group1">
+    <label for="imgcr">ImagCR</label>
+    <input type="text" name='imgcr' id='imgcr'class="new-input">
+    </div>
+    </div>
+    <div class="col1">
+    <div class="form-group1">
+      <label for="imgR">ImageR</label>
+      <input class="new-input" type="text" name='imgr' id='imgr'>
+      </div>
+      </div>
+      <div class="col1">
+      <div class="form-group1">
+        <label for="colorway">ColorWay</label>
+        <input class="new-input" type="text" name='imgr' id='imgr'>
+        </div>
+        </div>
+        <div class="col1">
+        <div class="form-group1">
+          <label for="condition">Condition</label>
+          <input class="new-input" type="text" name='condition' id='condition'>
+          </div>
+          </div>
+          <div class="col1">
+          <div class="form-group1">
+          <label for="size">Size</label>
+          <input class="new-input" type="text" name='size' id='size'>
+          </div>
+          </div>
+          <div class="col1">
+          <div class="form-group1">
+          <label for="worn"># Worn</label>
+          <input class="new-input" type="text" name='worn' id='worn'>
+          </div>
+          </div>
+      <div class="col1">
+      <input type="submit"value='Add Sneaker' class= "new-input">
+    </form>
+    </div>
+    </div>
+    </div>
+    
+
+  
+
+
+
+
+
+<!-- <div class="new-div">
 <div class="new-card">
     
     <h2>create New Sneaker</h2>
@@ -53,4 +138,4 @@
     </div>
 </div>
 
-
+ -->
