--- a/public/views/show.ejs
+++ b/public/views/show.ejs
@@ -21,22 +21,22 @@
           <div class = "img-select">
             <div class = "img-item">
               <a href = "<%= sneaker.lnk1%>" data-id = "1">
-                <img class="show-img"src = "<%= sneaker.bottomL %>" alt = "shoe image">
+                <img class="show-img"src = "<%= sneaker.imgL %>" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "<%= sneaker.lnk2%>" data-id = "2">
-                <img class="show-img" src = "<%= sneaker.bottomCL %>" alt = "shoe image">
+                <img class="show-img" src = "<%= sneaker.imgCL %>" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "<%= sneaker.lnk3%>" data-id = "3">
-                <img class="show-img"src = "<%= sneaker.bottomCR %>" alt = "shoe image">
+                <img class="show-img"src = "<%= sneaker.imgCR %>" alt = "shoe image">
               </a>
             </div>
             <div class = "img-item">
-              <a href = "<%= sneaker.lnk4%> data-id = "4">
-                <img class="show-img" src = "<%= sneaker.bottomR %>" alt = "shoe image">
+              <a href = "<%= sneaker.lnk4%>" data-id = "4">
+                <img class="show-img" src = "<%= sneaker.imgR %>" alt = "shoe image">
               </a>
             </div>
           </div>
